# ETE305

./: .gitignore  Aéroports.py  Aéroports_villes.csv  CO2_avions.npy  CO2_debut.npy  N_0.npy  Optim-pulp.lp  Optim-pulp.sol  README.md  Resultats_bruts_petite_grande_ville.py  Tableau_recap_train.csv  Tableau_recap_train1.csv  Tableau_recap_train3.csv  Tableau_recap_train5.csv  Tableau_voulu_trains.py  ac_capacity.py  calcul_CO2.py  capacity.csv  creation_donnees.py  emissions_trajet_ville1_ville2.py  extraction_csv.py  infos_avions.py  infos_trains.py  infos_vols.py  mass.csv  nouvelle_optim.py  optim.py  pyproject.toml  tableau_recap_avions  tableau_voulu.csv  train_places_dispo_et_emissions.py  traitement_resultats.py  traitement_resultats_general.py  traitement_resultats_trajet.py
BE1/: BE1.ipynb  BE1solution.ipynb  lp_visu_notebook.py
BE2/: BE Mines.ipynb
data/: CO2_avions.npy  CO2_debut.npy  N_0.npy  Tableau_recap_avions.csv  Tableau_recap_train1.csv  Tableau_recap_train2.csv  Tableau_recap_train3.csv  Tableau_recap_train4.csv  Tableau_recap_train5.csv  airports_ICAO.csv  flights_and_emissions.csv  passagers_init.npy
log-05-05-258-0constr/: log_trajet1.txt  log_trajet100.txt  log_trajet101.txt  log_trajet104.txt  log_trajet107.txt  log_trajet11.txt  log_trajet112.txt  log_trajet114.txt  log_trajet115.txt  log_trajet116.txt  log_trajet117.txt  log_trajet122.txt  log_trajet125.txt  log_trajet129.txt  log_trajet131.txt  log_trajet132.txt  log_trajet133.txt  log_trajet134.txt  log_trajet135.txt  log_trajet138.txt  log_trajet139.txt  log_trajet140.txt  (+135 more)
(+4005 files in other folders)
