[tool.poetry]
name = "ete305"
version = "0.1.0"
description = ""
authors = ["achevrot <antoine.chevrot@onera.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
pulp = "^2.7.0"
traffic = "^2.8.1"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    __pycache__
  | \.git
  | \.mypy_cache
  | \.ipynb_checkpoints
  | build
  | dist
)/
'''

[tool.isort]
line_length = 120
profile = "black"
known_first_party = ["numpy", "pandas"]

[tool.coverage.run]
source = ["src"]
